[project]
name = "sunspot"
version = "1.0.1"
description = "Simple and light-weight JPL ephemeris parser and tracking engine for astronomy and telescope guidance. Provides simple lists of ephemeris data for any Target Body available through the JPL Horizons App. Also provides real-time tracking of those data for the duration of an ephemeris."
readme = "README.md"
authors = [{ name = "Phillip Curtsmith", email = "phillip.curtsmith@gmail.com" }]
dependencies = []
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
